--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tailwind": "npx tailwindcss -i ./styles/app.css -o ./public/app.css --watch"
   },
   "dependencies": {
+    "chart.js": "^3.8.2",
+    "cookies-next": "^2.1.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "12.2.3",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.1.13",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "tailwindcss": "^3.1.6"
   }
 }
